# nodegaze

./: Cargo.toml  LICENSE  README.md
adapters/: Cargo.toml
adapters/src/: cln.rs  errors.rs  lib.rs  lnd.rs  models.rs
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/api/node/: handlers.rs  mod.rs  routes.rs
backend/src/api/user/: handlers.rs
backend/src/api/users/: mod.rs  routes.rs
backend/src/auth/: errors.rs  handlers.rs  middleware.rs  mod.rs  models.rs  routes.rs  service.rs
backend/src/config/: mod.rs
backend/src/database/: mod.rs  models.rs  queries.rs  schema.rs
backend/src/errors/: mod.rs
backend/src/middleware/: mod.rs
backend/src/services/: data_aggregator.rs  mod.rs  node_manager.rs
backend/src/utils/: mod.rs
