[package]
name = "adapters"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
secp256k1 = { version = "0.29", features = ["recovery", "serde"] }
log = "0.4"
env_logger = "0.11" # Optional, for basic console logging setup

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }