[package]
name = "adapters"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
secp256k1 = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
